# Global-Sales-Pulse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml
compose/: docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml
dags/: etl_pipeline.py
docs/: ARCHITECTURE.md
etl/: Dockerfile  Dockerfile.airflow  pyproject.toml
etl/migrations/: env.py
etl/migrations/versions/: 001_initial_schema.py
etl/scripts/: validate_schema.py
etl/src/: config.py  database.py
etl/src/consumers/: __init__.py  kafka_consumer.py
etl/src/loaders/: postgres_loader.py
etl/src/models/: __init__.py  transaction.py
etl/src/transformations/: __init__.py  fraud_detection.py  tax_calculator.py  transformer.py
grafana/dashboards/: sales-pulse.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
producer/: Dockerfile  pyproject.toml
producer/src/: config.py  main.py  models.py
tests/: Dockerfile  conftest.py  pyproject.toml
tests/e2e/: test_full_pipeline_e2e.py  test_pipeline_e2e.py  test_pipeline_integration.py
tests/integration/: test_kafka_consumer.py  test_loader.py  test_offset_safety.py
tests/unit/: test_dag.py  test_fraud_detection.py  test_models.py  test_producer_models.py  test_tax_calculator.py  test_transformer.py
