[project]
name = "producer"
version = "0.1.0"
description = "Transaction stream producer for Global Sales Pulse"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
