[project]
name = "tests"
version = "0.1.0"
description = "Tests for Global Sales Pulse"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: marks tests as end-to-end (require full infrastructure)",
]
log_cli = true
log_cli_level = "INFO"
